# kanji_practice

./: README.md  pyproject.toml
src/kanji/: __init__.py  main.py
