[project]
name = "kanji"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "nebocco", email = "nebocco@gmail.com" }
]
dependencies = ["reportlab~=4.0.6", "argparse~=1.4.0"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
